--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
-        import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js";
+        import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js";
         import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js";
 
         const firebaseConfig = {
@@ -84,56 +84,60 @@
         const auth = getAuth(app);
         const db = getFirestore(app);
 
+        document.getElementById('login').addEventListener('click', login);
+
         function login() {
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
             const errorElement = document.getElementById('error');
 
+            if (!email || !password) {
+                errorElement.textContent = "Please enter both email and password.";
+                return;
+            }
+
             signInWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
+                .then(async (userCredential) => {
                     const user = userCredential.user;
-                    checkUserRole(user.uid);
+                    const userDocRef = doc(db, "users", user.uid);
+                    const docSnapshot = await getDoc(userDocRef);
+
+                    if (docSnapshot.exists()) {
+                        const userData = docSnapshot.data();
+                        const role = userData.role;
+
+                        // Store user info in localStorage
+                        localStorage.setItem("user", JSON.stringify({ uid: user.uid, role: role }));
+
+                        if (role === "admin") {
+                            window.location.href = "admin.html";
+                        } else if (role === "student") {
+                            window.location.href = "student.html";
+                        } else {
+                            alert("Role not defined.");
+                        }
+                    } else {
+                        alert("User data not found.");
+                    }
                 })
                 .catch((error) => {
                     errorElement.textContent = error.message;
                 });
         }
 
-        document.getElementById('login').addEventListener('click', login);
-
-        function checkUserRole(uid) {
-            const userDocRef = doc(db, "users", uid);
-            getDoc(userDocRef)
-                .then((docSnapshot) => {
-                    if (docSnapshot.exists()) {
-                        const userData = docSnapshot.data();
-                        const role = userData.role;
-
-                        if (role === "admin") {
-                            window.location.href = "admin.html"; // Redirect to admin page
-                        } else if (role === "student") {
-                            window.location.href = "student.html"; // Redirect to student page
-                        } else {
-                            alert("Role not defined");
-                        }
-                    } else {
-                        alert("User data not found");
-                    }
-                })
-                .catch((error) => {
-                    console.error("Error getting user data:", error);
-                    alert("Error checking user role.");
-                });
+        // Check if user is already logged in
+        function checkUserSession() {
+            const storedUser = JSON.parse(localStorage.getItem("user"));
+            if (storedUser) {
+                if (storedUser.role === "admin") {
+                    window.location.href = "admin.html";
+                } else if (storedUser.role === "student") {
+                    window.location.href = "student.html";
+                }
+            }
         }
 
-
-
-        onAuthStateChanged(auth, (user) => {
-            if (user) {
-                checkUserRole(user.uid);
-            }
-        });
-
+        checkUserSession();
     </script>
 </body>
 </html>
