--- a/admin.html
+++ b/admin.html
@@ -9,17 +9,20 @@
     <button id="logout">Logout</button>
 
     <script>
-        const storedUser = JSON.parse(localStorage.getItem("user"));
-
-        if (!storedUser) {
-            // If no user is found in localStorage, redirect to login page
-            window.location.href = "index.html";
-        }
-        document.getElementById('logout').addEventListener('click', () => {
-            localStorage.removeItem('user'); // Clear user session
-            window.location.href = "index.html"; // Redirect to login page
+        // Ensure only logged-in admins can access this page
+        document.addEventListener("DOMContentLoaded", () => {
+            const storedUser = JSON.parse(localStorage.getItem("user"));
+            if (!storedUser || storedUser.role !== "admin") {
+                window.location.href = "index.html"; // Redirect if unauthorized
+            }
         });
     </script>
+
+    <script type="module">
+        import { logout } from "./auth.js";
+        document.getElementById('logout').addEventListener('click', logout);
+    </script>
+    
 
 </body>
 </html>
